--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="css/lightbox.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/galeria.css">
     <script src="https://kit.fontawesome.com/ce4b0e445d.js" crossorigin="anonymous"></script>
     <script>
-    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+        document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
     </script>
 </head>
 
@@ -60,8 +62,8 @@
             <div class="separador">
             </div>
             <div class="variante">
-                <p> "Enrique cuenta con más de 4 décadas de experiencia en el cuidado de sus residentes, caracterizado por su gran vocación de servicio y por su habilidad de comprender las necesidades de quienes llegan a Abuela
-                    Angelina como también de acompañar y empatizar con sus familiares."</p>
+                <p> "Enrique cuenta con más de 4 décadas de experiencia en el cuidado de sus residentes, caracterizado por su gran vocación de servicio y por su habilidad de comprender las necesidades de quienes llegan a Abuela Angelina como también de acompañar
+                    y empatizar con sus familiares."</p>
             </div>
         </div>
     </section>
@@ -96,30 +98,47 @@
             </h2>
             <p>La casa se encuentra ubicada entre dos plazas, en sus cercanías hay un espacio de juegos agradable al que pueden acercarse aprovechando el ambiente como distracción y un buen momento al aire libre. </p>
             <div class="separador"></div>
-            <p>Está a 10 minutos del centro y en la puerta presenta
-                una parada de micros con varias líneas.</p>
+            <p>Está a 10 minutos del centro y en la puerta presenta una parada de micros con varias líneas.</p>
         </div>
         <section class="mapa contenedor" id="mapa">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar"
+                width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </section>
     </section>
     <!--seccion mapa-->
     <section class="contenedor galeria-index">
         <h2>Galería de imagenes <i class="fas fa-images"></i></h2>
-        <div class="galeria">
-            <a href="img/servicio1.jpg" data-lightbox="galeria">
-                <img src="img/servicio1.jpg">
-            </a>
-            <a href="img/servicio1.jpg" data-lightbox="galeria">
-                <img src="img/servicio1.jpg">
-            </a>
-            <a href="img/servicio1.jpg" data-lightbox="galeria">
-                <img src="img/servicio1.jpg">
-            </a>
-            <a href="img/servicio1.jpg" data-lightbox="galeria">
-                <img src="img/servicio1.jpg">
-            </a>
+        <div class="carousel center-align">
+            <div class="carousel-item">
+                <img src="img/img-galeria/54.JPG" alt="">
+            </div>
+
+            <div class="carousel-item">
+                <img src="img/img-galeria/61.jpeg" alt="">
+            </div>
+
+
+            <div class="carousel-item">
+                <img src="img/img-galeria/63.jpeg" alt="">
+            </div>
+
+
+            <div class="carousel-item">
+                <img src="img/img-galeria/65.jpeg" alt="">
+            </div>
+
+
+            <div class="carousel-item">
+                <img src="img/img-galeria/71.jpeg" alt="">
+            </div>
+
+
+
+
+
+
         </div>
+
         <div class="separador">
         </div>
         <div class="galeria-texto">
@@ -162,7 +181,8 @@
                 <p>Teléfono: <span>155555555555</span></p>
             </div>
             <div class="minimapa">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar"
+                    height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
         </div>
         <div class="footer2">
@@ -177,6 +197,8 @@
     <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
     <script src="js/lightbox-plus-jquery.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
