Cambios Galeria Index y servicios

--- a/servicios.html
+++ b/servicios.html
@@ -41,40 +41,79 @@
             <i class="fas fa-comment-medical salud"></i>
             <h3>Servicios de Salud</h3>
             <ul>
-                <li>Nuestro Director Médico Néstor Fraga, atiende todos los sábados a nuestros residentes y se
-                    reúne con nosotros mensualmente para hacer una evaluación de la situación general de
-                    cada integrante de Abuela Angelina.</li>
-                <li>Psicomotricista: visita cada semana y propone ejercicios que estimulan las capacidades
-                    motrices y cognitivas a través de un trabajo integral con los residentes.</li>
-                <li>Nutricionista: encargada de supervisar la alimentación.</li>
+                <li>
+                    <p>Nuestro Director Médico Néstor Fraga, atiende todos los sábados a nuestros residentes y se
+                        reúne con nosotros mensualmente para hacer una evaluación de la situación general de
+                        cada integrante de Abuela Angelina.</p><i class="fas fa-notes-medical"></i>
+                </li>
+                <li>
+                    <p>Psicomotricista: visita cada semana y propone ejercicios que estimulan las capacidades
+                        motrices y cognitivas a través de un trabajo integral con los residentes.
+                    </p><i class="fab fa-accessible-icon"></i>
+                </li>
+                <li>
+                    <p>Nutricionista: encargada de supervisar la alimentación. </p><i class="fas fa-drumstick-bite"></i>
+                </li>
             </ul>
         </div>
         <div class="servicio-unico contenedor">
             <i class="fas fa-building edificio"></i>
             <h3>Servicios de Acomodación</h3>
             <ul>
-                <li>Ambientes con iluminación natural</li>
-                <li>Habitaciones individuales con baño privado</li>
-                <li>Habitación privada con baño compartido</li>
-                <li>Baños para sillas de ruedas</li>
-                <li>Calefacción central</li>
-                <li>Jardín</li>
-                <li>Ascensor</li>
-                <li>Espacios comunes de esparcimiento</li>
+                <li>
+                    <p>Ambientes con iluminación natural</p><i class="fas fa-sun"></i>
+                </li>
+                <li>
+                    <p>Habitaciones individuales con baño privado </p><i class="fas fa-toilet"></i>
+                </li>
+                <li>
+                    <p>Habitación privada con baño compartido</p><i class="fas fa-toilet-paper"></i>
+                </li>
+                <li>
+                    <p>Baños para sillas de ruedas</p><i class="fab fa-accessible-icon"></i>
+                </li>
+                <li>
+                    <p>Calefacción central</p><i class="fas fa-hot-tub"></i>
+                </li>
+                <li>
+                    <p>Jardín</p><i class="fas fa-seedling"></i>
+                </li>
+                <li>
+                    <p>Ascensor</p><i class="fas fa-sort-amount-up-alt"></i>
+                </li>
+                <li>
+                    <p>Espacios comunes de esparcimiento</p><i class="fas fa-users"></i>
+                </li>
             </ul>
         </div>
         <div class="servicio-unico contenedor">
             <i class="fas fa-gifts regalo"></i>
             <h3>Servicios Generales</h3>
             <ul>
-                <li>Peluquería</li>
-                <li>Servicio de Cadetería</li>
-                <li>Música</li>
-                <li>Actividades lúdicas</li>
-                <li>Fiestas temáticas y cumpleaños</li>
-                <li>TV Cable</li>
-                <li>WIFI</li>
-                <li>Lavandería (a excepción de prendas especiales que ameriten cuidados complejos)</li>
+                <li>
+                    <p>Peluquería</p><i class="fas fa-cut"></i>
+                </li>
+                <li>
+                    <p>Servicio de Cadetería</p><i class="fas fa-clipboard-check"></i>
+                </li>
+                <li>
+                    <p>Música</p><i class="fas fa-music"></i>
+                </li>
+                <li>
+                    <p>Actividades lúdicas</p><i class="fas fa-puzzle-piece"></i>
+                </li>
+                <li>
+                    <p>Fiestas temáticas y cumpleaños</p><i class="fas fa-birthday-cake"></i>
+                </li>
+                <li>
+                    <p>TV Cable</p><i class="fas fa-tv"></i>
+                </li>
+                <li>
+                    <p>WIFI</p><i class="fas fa-wifi"></i>
+                </li>
+                <li>
+                    <p>Lavandería (excepción de prendas especiales con cuidado complejo)</p><i class="fas fa-tshirt"></i>
+                </li>
             </ul>
         </div>
     </main>
@@ -99,21 +138,17 @@
         <div class="footer-contenido contenedor">
             <div class="informacion">
                 <p>Dirección: <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span></p>
-
                 <p>Teléfono: <span>155555555555</span></p>
             </div>
-            <!-- <div class="minimapa">
-                <h2>Mapa</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar"
-                    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-            </div>-->
+            <div class="minimapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
         </div>
         <div class="footer2">
             <p class="copyright">
                 Todos los derechos reservados Residencial Abuela Angelina &copy;
                 <br> Copyright © 2021.
             </p>
-
         </div>
     </footer>
     <!-- footer -->
