--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/galeria.css">
     <script src="https://kit.fontawesome.com/ce4b0e445d.js" crossorigin="anonymous"></script>
     <script>
-        document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
     </script>
 </head>
 
@@ -46,7 +46,7 @@
     </section>
     <!--navegación principal-->
     <section class="contenedor seccion-nosotros">
-        <h1>Geriátrico Abuela Angelina</h1>
+        <h1>Residencia Abuela Angelina</h1>
         <i class="fas fa-hand-holding-heart"></i>
         <div class="nosotros">
             <div class="texto-nosotros">
@@ -101,47 +101,32 @@
             <p>Está a 10 minutos del centro y en la puerta presenta una parada de micros con varias líneas.</p>
         </div>
         <section class="mapa contenedor" id="mapa">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar"
-                width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </section>
     </section>
     <!--seccion mapa-->
-    <section class="contenedor galeria-index">
-        <h2>Galería de imagenes <i class="fas fa-images"></i></h2>
-        <div class="carousel center-align">
+    <section class="galeria-index">
+        <h2>Conoce nuestro hogar<i class="fas fa-images"></i></h2>
+        <div class="separador">
+        </div>
+        <div class="carousel center-align contenedor ">
             <div class="carousel-item">
                 <img src="img/img-galeria/54.JPG" alt="">
             </div>
-
             <div class="carousel-item">
                 <img src="img/img-galeria/61.jpeg" alt="">
             </div>
-
-
             <div class="carousel-item">
                 <img src="img/img-galeria/63.jpeg" alt="">
             </div>
-
-
             <div class="carousel-item">
                 <img src="img/img-galeria/65.jpeg" alt="">
             </div>
-
-
             <div class="carousel-item">
                 <img src="img/img-galeria/71.jpeg" alt="">
             </div>
-
-
-
-
-
-
         </div>
-
-        <div class="separador">
-        </div>
-        <div class="galeria-texto">
+        <div class="galeria-texto contenedor ">
             <p>El equipo de trabajo es parte de un engranaje, indispensable y profesional, que junto a Enrique mantienen los pilares primordiales de la vocación de servicio y un trato digno, o como ellos dicen: <span>“Somos gente que cuidamos gente”</span>.
                 Cada persona que llega a Abuela Angelina es diferente, y aquí es donde nuestro equipo se destaca, priorizando siempre las necesidades de cada uno, desde su salud física hasta lo emocional.
             </p>
@@ -176,13 +161,11 @@
     <footer class="footer">
         <div class="footer-contenido contenedor">
             <div class="informacion">
-                <p>Dirección: <span>Avenida Agraciada 3002,Montevideo, Departamento de Montevideo, Uruguay
-                        .</span></p>
+                <p>Dirección: <span>Avenida Agraciada 3002,Montevideo, Departamento de Montevideo, Uruguay.</span></p>
                 <p>Teléfono: <span>155555555555</span></p>
             </div>
             <div class="minimapa">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar"
-                    height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
         </div>
         <div class="footer2">
