Modificación Servicios y Varios

--- a/galeria.html
+++ b/galeria.html
@@ -36,7 +36,7 @@
     </section>
     <!--barra interna-->
     <section class="contenedor seccion-nosotros">
-        <h1>Geriátrico Abuela Angelina</h1>
+        <h1>Residencia Abuela Angelina</h1>
         <div class="nosotros">
             <div class="texto-nosotros">
                 <p>"<span>Abuela Angelina</span> es una de las pocas residencias que hasta el día de la fecha es atendida por su dueño,
