--- a/nosotros.html
+++ b/nosotros.html
@@ -28,15 +28,16 @@
                 <a class="barras" id="barras"><i class="fas fa-bars"></i></a>
             </div>
             <nav class="navegacion">
-                <a href="galeria.html" class="boton-primario">Imágenes</a>
+                
                 <a href="servicios.html" class="boton-primario">Servicios</a>
                 <a href="nosotros.html" class="boton-primario">Nosotros</a>
+                <a href="galeria.html" class="boton-primario">Imágenes</a>
             </nav>
         </div>
     </section>
     <!--barra interna-->
     <section class="contenedor seccion-nosotros">
-        <h1>Geriátrico Abuela Angelina</h1>
+        <h1>Residencia Abuela Angelina</h1>
         <div class="nosotros">
             <div class="texto-nosotros">
                 <p>"<span>Abuela Angelina</span>
@@ -59,7 +60,7 @@
         <h2>Sobre Nosotros</h2>
         <div class="tabla-servicios contenedor">
             <div class="servicio">
-                <i class="fas fa-medal salud"></i>
+                <i class="fas fa-medal"></i>
                 <h3>Trayectoria</h3>
                 <p>Abuela Angelina lleva consigo más de 4 décadas de trayectoria y experiencia en el cuidado
                     de sus residentes, caracterizada por un equipo de trabajo con gran vocación de servicio y
@@ -67,7 +68,7 @@
                     predisposición de acompañar y empatizar con sus familiares</p>
             </div>
             <div class="servicio">
-                <i class="fas fa-people-arrows edificio"></i>
+                <i class="fas fa-people-arrows"></i>
                 <h3>Relación Humanitaria</h3>
                 <p>
                     Sabemos que el período de adaptación es el más complejo por lo que tratamos de facilitar
@@ -76,7 +77,7 @@
                 </p>
             </div>
             <div class="servicio">
-                <i class="fas fa-users regalo"></i>
+                <i class="fas fa-users"></i>
                 <h3>Equipo Sólido y Vocacional</h3>
                 <p>Cada persona que llega a Abuela Angelina es diferente, y aquí es donde nuestro equipo se
                     destaca, priorizando siempre las necesidades de cada uno, desde su salud física hasta lo
@@ -86,17 +87,49 @@
             </div>
         </div>
     </main>
+    <section class="seccion-casa contenedor">
+        <h2>Recorrido por la casa</h2>
+        <div class="nosotros-flex contenedor">
+            <div class="casa-data">
+                <p>Nuestra casa cuenta con dos plantas, ventanales y altas puertas que conservan un aire no
+                    solamente encantador sino también cómodo.</p>
+                <p>Contamos con 5 baños, un ascensor como solución para nuestros residentes y con un gran
+                    jardín, amplio y con árboles frondosos, por supuesto, uno de los espacios preferidos, donde
+                    se dan muchas actividades y momentos de intercambio.</p>
+                <p>Nos ubicamos en una zona céntrica, rodeados de dos plazas, negocios, una avenida
+                    principal y varias líneas de colectivos para hacer más cómoda su visita.</p>
+                <ul>
+                    <li>Ascensor</li>
+                    <li>5 baños</li>
+                    <li>Gran jardín</li>
+                    <li>Fuerte sentido de comunidad</li>
+                    <li>Vasta experiencia en el rubro</li>
+                </ul>
+            </div>
+            <div class="imagenes">
+                <img src="img/abuelos.jpg" alt="casa">
+                <img src="img/abuelos.jpg" alt="casa">
+            </div>
+        </div>
+    </section>
+    <!--Casa Info-->
+    <section class="cita-container">
+        <div class="cita contenedor">
+            <i class="fas fa-quote-right"></i>
+            <blockquote>Somos gente que cuidamos gente.
+            </blockquote>
+        </div>
+    </section>
+    <!--Cita-->
     <footer class="footer">
-         <div class="separador"></div>
+        <div class="separador"></div>
         <div class="footer-contenido contenedor">
             <div class="informacion">
                 <p>Dirección: <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span></p>
-
                 <p>Teléfono: <span>155555555555</span></p>
             </div>
             <div class="minimapa">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar"
-                    height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
         </div>
         <div class="footer2">
@@ -104,7 +137,6 @@
                 Todos los derechos reservados Residencial Abuela Angelina &copy;
                 <br> Copyright © 2021.
             </p>
-
         </div>
     </footer>
     <!-- footer -->
