--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=PT+Sans:ital@0;1&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,200;0,400;1,500&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="css/lightbox.min.css">
@@ -19,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="css/galeria.css">
     <script src="https://kit.fontawesome.com/ce4b0e445d.js" crossorigin="anonymous"></script>
     <script>
-        document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
     </script>
 </head>
 
@@ -46,7 +49,7 @@
     </section>
     <!--navegación principal-->
     <section class="contenedor seccion-nosotros">
-        <h1>Residencia Abuela Angelina</h1>
+        <h1>Residencial Abuela Angelina</h1>
         <i class="fas fa-hand-holding-heart"></i>
         <div class="nosotros">
             <div class="texto-nosotros">
@@ -62,31 +65,31 @@
             <div class="separador">
             </div>
             <div class="variante">
-                <p> "Enrique cuenta con más de 4 décadas de experiencia en el cuidado de sus residentes, caracterizado por su gran vocación de servicio y por su habilidad de comprender las necesidades de quienes llegan a Abuela Angelina como también de acompañar
-                    y empatizar con sus familiares."</p>
+                <p> "Abuela Angelina lleva consigo aproximadamente 4 décadas de trayectoria y experiencia en el cuidado de sus residentes, caracterizada por un equipo de trabajo con gran vocación de servicio y habilidad para comprender las necesidades de quienes llegan a la residencia y para acompañar y empatizar con sus familiares."</p>
             </div>
         </div>
     </section>
     <!--seccion nosotros-->
-    <main class="seccion-principal">
+    <main class="principal-index">
         <h2>Nuestros Servicios</h2>
         <div class="tabla-servicios contenedor">
-            <div class="servicio">
+            <div class="servicio-index">
                 <i class="fas fa-comment-medical "></i>
                 <h3>Servicios de Salud</h3>
-                <p>Contamos con distintos profesionales altamente capacitados para brindar los servicios medicos y de cuidado escenciales que requieren nuestros abuelos para poder llevar a cabo su dia a dia con comodidad y sintiéndose plenos.</p>
+                <p>Contamos con distintos profesionales, capacitados para brindar los servicios médicos y de cuidado esencial que requieren nuestros residentes para poder llevar su estadía de la mejor manera.</p>
             </div>
-            <div class="servicio">
+            <div class="servicio-index">
                 <i class="fas fa-building"></i>
                 <h3>Servicios de Acomodación</h3>
                 <p>
-                    Nuestra casa cuenta con dos plantas, ventanales y altas puertas que conservan un aire no solamente encantador sino también cómodo. Contamos con 5 baños, un ascensor como solución para nuestros residentes y con un gran jardín.
+                    Nuestra casa cuenta con una gran superficie de 620m2 de edificado. Estructura de 2 plantas, 5 baños, un gran jardín y un ascensor para mayores comodidades.
                 </p>
             </div>
-            <div class="servicio">
+            <div class="servicio-index">
                 <i class="fas fa-gifts"></i>
                 <h3>Servicios Generales</h3>
-                <p>Brindamos servicios generales para el óptimo desarrollo de nuestros abuelos tales como juegos lúdicos, distintos tipos de fiestas temáticas, servicios tecnológicos como wifi e incluso, atención estética. </p>
+                <p>Estamos dedicados al desarrollo óptimo de nuestros residentes, es por eso que contamos con actividades lúdicas, fiestas temáticas, WiFi, peluquería entre otras.
+                </p>
             </div>
         </div>
         <a class="boton-secundario" href="servicios.html">Ver más</a>
@@ -96,14 +99,20 @@
         <div class="texto-mapa">
             <h2>¿Dónde nos encontramos? <i class="fas fa-map-marker-alt"></i>
             </h2>
-            <p>La casa se encuentra ubicada entre dos plazas, en sus cercanías hay un espacio de juegos agradable al que pueden acercarse aprovechando el ambiente como distracción y un buen momento al aire libre. </p>
+            <p>La casa se encuentra ubicada sobre una avenida principal, Avenida Agraciada 3002. Rodeada de 2 plazas, y un espacio de juegos agradable al que pueden acercarse para pasar un buen momento al aire libre.</p>
             <div class="separador"></div>
-            <p>Está a 10 minutos del centro y en la puerta presenta una parada de micros con varias líneas.</p>
+            <p>Estamos a 10 minutos del centro y en la puerta encontrará una parada de micros con varias líneas.</p>
         </div>
         <section class="mapa contenedor" id="mapa">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar"
-                width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </section>
+    </section>
+    <section class="info-covid">
+        <div class="texto-covid contenedor">
+            <h2>Información Covid</h2>
+            <i class="fas fa-virus"></i>
+            <p>Actualmente las visitas y algunas actividades se encuentran suspendidas hasta nuevo aviso, debido al contexto de público conocimiento, tomando como referencia los protocolos del Ministerio de Salúd Pública.</p>
+        </div>
     </section>
     <!--seccion mapa-->
     <section class="galeria-index">
@@ -154,8 +163,9 @@
     <!--seccion contacto-->
     <seccion id="whatsapp">
         <a href="https://wa.me/2614703370">
-            <img src="img/whatsapp.png">
-            <p>Comunicate con nosotros.</p>
+            <!--<img src="img/whatsapp.png">-->
+            <i class="fab fa-whatsapp"></i>
+            <p>Comunicate con nosotros</p>
         </a>
     </seccion>
     <!--Boton wpp-->
@@ -164,10 +174,13 @@
             <div class="informacion">
                 <p>Dirección: <span>Avenida Agraciada 3002,Montevideo, Departamento de Montevideo, Uruguay.</span></p>
                 <p>Teléfono: <span>155555555555</span></p>
+                <p>Novedades: <span>Actualmente las visitas y algunas actividades se
+                        encuentran suspendidas hasta nuevo aviso, debido al
+                        contexto de público conocimiento, tomando como
+                        referencia los protocolos del Ministerio de Salud Pública.</span></p>
             </div>
             <div class="minimapa">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar"
-                    height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
         </div>
         <div class="footer2">
