--- a/nosotros.html
+++ b/nosotros.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=PT+Sans:ital@0;1&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,200;0,400;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" href="css/lightbox.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -122,11 +123,14 @@
     </section>
     <!--Cita-->
     <footer class="footer">
-        <div class="separador"></div>
         <div class="footer-contenido contenedor">
             <div class="informacion">
-                <p>Dirección: <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span></p>
+                <p>Dirección: <span>Avenida Agraciada 3002,Montevideo, Departamento de Montevideo, Uruguay.</span></p>
                 <p>Teléfono: <span>155555555555</span></p>
+                <p>Novedades: <span>Actualmente las visitas y algunas actividades se
+                        encuentran suspendidas hasta nuevo aviso, debido al
+                        contexto de público conocimiento, tomando como
+                        referencia los protocolos del Ministerio de Salud Pública.</span></p>
             </div>
             <div class="minimapa">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13092.660713555826!2d-56.201520663719144!3d-34.87719828788682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f80039adc6c65%3A0xa07404ba6219b0ed!2sAv.%20Agraciada%203002%2C%2011800%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2sar!4v1609853986309!5m2!1ses!2sar" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
