Cambios tipografias, colores e iconos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <section class="navegacion-principal">
+    <section class="navegacion-principal parallax">
         <div class="barra contenedor">
             <div class="barra-responsive">
                 <a class="logo" href="index.html">
@@ -50,7 +50,7 @@
     <!--navegación principal-->
     <section class="contenedor seccion-nosotros">
         <h1>Residencial Abuela Angelina</h1>
-        <i class="fas fa-hand-holding-heart"></i>
+        <img class="flor" src="img/flor.png" alt="palmeras">
         <div class="nosotros">
             <div class="texto-nosotros">
                 <p>"<span>Abuela Angelina</span> es una de las pocas residencias que hasta el día de la fecha es atendida por su dueño,
@@ -74,19 +74,19 @@
         <h2>Nuestros Servicios</h2>
         <div class="tabla-servicios contenedor">
             <div class="servicio-index">
-                <i class="fas fa-comment-medical "></i>
+                <img class="icon-serv" src="img/medical.png" alt="iconos">
                 <h3>Servicios de Salud</h3>
                 <p>Contamos con distintos profesionales, capacitados para brindar los servicios médicos y de cuidado esencial que requieren nuestros residentes para poder llevar su estadía de la mejor manera.</p>
             </div>
             <div class="servicio-index">
-                <i class="fas fa-building"></i>
+                <img class="icon-serv" src="img/cama.png" alt="iconos">
                 <h3>Servicios de Acomodación</h3>
                 <p>
                     Nuestra casa cuenta con una gran superficie de 620m2 de edificado. Estructura de 2 plantas, 5 baños, un gran jardín y un ascensor para mayores comodidades.
                 </p>
             </div>
             <div class="servicio-index">
-                <i class="fas fa-gifts"></i>
+                <img class="icon-serv" src="img/corazon.png" alt="iconos">
                 <h3>Servicios Generales</h3>
                 <p>Estamos dedicados al desarrollo óptimo de nuestros residentes, es por eso que contamos con actividades lúdicas, fiestas temáticas, WiFi, peluquería entre otras.
                 </p>
